Add controller of order

--- a/config/permission.yml.example
+++ b/config/permission.yml.example
@@ -29,14 +29,14 @@ permission:
     updateall: "更新所有订单"
     assignall: "分配订单"
     assign: "给自己分配订单"
+    release: "释放订单"
     reject: "拒绝订单"
     report: "上报订单"
-    hangup: "挂起订单"
+    hold: "挂起订单"
     complete: "完成订单"
     defect: "修改故障分类"
     urgence: "修改紧急程度"
-    grade: "评分"
-    gradeall: "给所有订单评分"
+    appraise: "评分"
     comment:
       create: "创建评论"
       delete: "删除评论"
