Add github action

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,18 @@
 docs
 bin
 lib
-*.yaml
-*.yml
 *.exe
 *.db
+*.log
+*.tmp
+*.zip
+*.tar
+*.gz
+*.out
+app.yaml
+role.yaml
+permission.yaml
+app.yml
+role.yml
+permission.yml
 maintainman
