Add tag permission management

--- a/config/role.yml.example
+++ b/config/role.yml.example
@@ -1,4 +1,5 @@
 # Only buttom-up inheritance is valid (latter roles are superior)
+version: 1.0.0
 role:
   - name: banned
     display_name: "封停用户"
