--- a/config/permission.yml.example
+++ b/config/permission.yml.example
@@ -1,12 +1,10 @@
-version: 1.0.2
+version: 1.0.3
 permission:
   user:
     view: "查看当前用户"
     create: "创建用户"
     update: "更新用户"
     updateall: "更新所有用户"
-    role: "修改角色"
-    division: "修改部门"
     delete: "删除用户"
     viewall: "查看所有用户"
     login: "登录"
@@ -22,6 +20,11 @@ permission:
     viewall: "查看所有角色"
   permission:
     viewall: "查看所有权限"
+  division:
+    viewall: "查看所有分组"
+    create: "创建分组"
+    update: "更新分组"
+    delete: "删除分组"
   announce:
     view: "查看公告"
     hit: "点击公告"
@@ -43,8 +46,6 @@ permission:
     report: "上报订单"
     hold: "挂起订单"
     complete: "完成订单"
-    defect: "修改故障分类"
-    urgence: "修改紧急程度"
     appraise: "评分"
     viewall: "查看所有订单"
     comment:
