Big change! - Add photo upload and view - Add photo transform support (watermark included) - Add storage (local / AWS S3) - Add cache with LRU (local ristretto / redis) - Add throttling rate limiter - Add username in jwt token to decrease query of database - Add default opensourced font SourceHanSans - Fix format and name of file and variable - Makefile test only run e2e test now - Add permissions of image
Signed-off-by: xaxys <tpnnghd@163.com>

--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,12 @@ lib
 app.yaml
 role.yaml
 permission.yaml
+image.yaml
 app.yml
 role.yml
 permission.yml
+image.yml
 maintainman
 
 dist/
+images/
