--- a/config/app.yml.example
+++ b/config/app.yml.example
@@ -1,4 +1,4 @@
-version: 1.1.0
+version: 1.2.0
 app:
   name: "maintainman"
   listen: ":8080"
@@ -34,14 +34,23 @@ database:
   sqlite:
     path: "maintainman.db"
 
+storage:
+  driver: "local"
+  local:
+    path: "./images"
+  s3:
+    access_key: ""
+    secret_key: ""
+    bucket: ""
+    region: ""
+
 cache:
-  driver: "go-cache"
+  driver: "local"
+  limit: 268435456 # 128M
   redis:
     host: "localhost"
     port: 6379
     password: ""
-  expire: "24h"
-  purge: "10m"
 
 admin: # only apply at first initialization
   name: "admin"
