--- a/config/role.yml.example
+++ b/config/role.yml.example
@@ -1,5 +1,5 @@
 # Only buttom-up inheritance is valid (latter roles are superior)
-version: 1.1.0
+version: 1.2.0
 role:
   - name: banned
     display_name: "封停用户"
@@ -18,6 +18,8 @@ role:
     display_name: "普通用户"
     default: true
     permissions:
+      - "image.upload"
+      - "image.view"
       - "user.view"
       - "user.update"
       - "user.renew"
@@ -59,6 +61,7 @@ role:
   - name: admin
     display_name: "管理员"
     permissions:
+      - "image.*"
       - "division.*"
       - "announce.*"
       - "order.*"
