Fix some bug & add some option - Limit max dimision in transformation - Fix wrong cache use - Fix wx appsecret in response error info - Add save as jpeg options

--- a/config/image.yml.example
+++ b/config/image.yml.example
@@ -1,5 +1,7 @@
 jpeg_quality: 80
 gif_num_colors: 256
+cache_as_jpeg: true
+save_as_jpeg: false
 
 upload:
   async: false # Upload request returns straight after image is processed by the server (saving might still fail)
