Change default transform config. Add scale check

--- a/config/image.yml.example
+++ b/config/image.yml.example
@@ -26,10 +26,8 @@ storage:
     bucket: BUCKET
 
 transformations:
-  sw-corner:
-    params:  w_100,h_100,c_k,g_sw
   square:
-    params:  w_200,h_200
+    params:   w_256,h_256,c_p,g_c
     eager:   true # Run on every upload
   watermarked:
     default: true
