--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -2,10 +2,9 @@
 # Make sure to check the documentation at https://goreleaser.com
 before:
   hooks:
-    # You may remove this if you don't use go modules.
     - go mod tidy
-    # you may remove this if you don't need go generate
     - go generate ./...
+    - go-bindata -nomemcopy --pkg bindata -o ./bindata/bindata.go fonts/...
 builds:
   - id: darwin_amd64
     env:
