--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -5,8 +5,7 @@ before:
     - go mod tidy
     - go generate ./...
     # install and run go-bindata
-    - go get -u github.com/go-bindata/go-bindata/...
-    - export PATH=$PATH:$(go env GOPATH)/bin
+    - go install -a github.com/go-bindata/go-bindata/...@latest
     - go-bindata -nomemcopy --pkg bindata -o ./bindata/bindata.go fonts/...
 builds:
   - id: darwin_amd64
