--- a/config/role.yml.example
+++ b/config/role.yml.example
@@ -42,6 +42,7 @@ role:
   - name: maintainer
     display_name: "维护工"
     permissions:
+      - "order.viewfix"
       - "order.reject"
       - "order.report"
       - "order.complete"
