--- a/config/app.yml.example
+++ b/config/app.yml.example
@@ -1,4 +1,4 @@
-version: 1.2.0
+version: 1.2.1
 app:
   name: "maintainman"
   listen: ":8080"
@@ -12,6 +12,7 @@ app:
     timeout: "72h"
     purge: "10m"
     default: 5
+  item_can_negative: true
 
 wechat:
   appid: ""
