--- a/example/app.yml.example
+++ b/example/app.yml.example
@@ -1,22 +1,30 @@
-version: 1.2.2
 app:
+  # application name.
   name: "maintainman"
+  # listen port.
   listen: ":8080"
+  # log level (debug, info, warn, error, fatal).
   loglevel: "debug"
+
   page:
+    # max number of items in a page.
+    # http request paramenter `limit` must not exceed this value.
     limit: 100
+    # default number of items in a page.
+    # this number will be used when http request paramenter `limit`
+    # is not specified or <= 0.
     default: 50
 
-wechat:
-  appid: ""
-  secret: ""
-  fastlogin: true
-
 token:
-  key: "xaxys_2022_all_rights_reserved"
+  # token secret.
+  # IMPORTANT! you'd better change it to a random string or a strong
+  # secret key.
+  key: ""
+  # token expire duration.
   expire: "30m"
 
 database:
+  # database type (mysql, sqlite).
   driver: "mysql"
   mysql:
     host: "localhost"
@@ -24,14 +32,18 @@ database:
     name: "maintainman"
     params: "parseTime=true&loc=Local&charset=utf8mb4"
     user: "root"
-    password: "123456"
+    password: ""
   sqlite:
+    # sqlite database file path.
     path: "maintainman.db"
 
 storage:
+  # storage type (local, s3).
   driver: "local"
   local:
     path: "./images"
+  # if s3 connection defined here, module config without s3 connection
+  # will use the connection defined here.
   s3:
     access_key: ""
     secret_key: ""
@@ -39,15 +51,13 @@ storage:
     region: ""
 
 cache:
+  # cache type (local, redis).
   driver: "local"
+  # cache limit. if the cache limit is reached, some entries will be
+  # evicted automatically.
+  # if the cache limit is 0, no entries will not be evicted.
   limit: 268435456 # 256M
   redis:
     host: "localhost"
     port: 6379
     password: ""
-
-admin: # only apply at first initialization
-  name: "admin"
-  display_name: "maintainman default admin"
-  role_name: "super_admin"
-  password: "12345678"
