Add wechat notify module

--- a/example/order.yml.example
+++ b/example/order.yml.example
@@ -12,3 +12,21 @@ appraise:
   purge: "10m"
   # the default appraise score of timeouted unappraised order.
   default: 5
+
+notify:
+  wechat:
+    status:
+      tmpl:   "微信订阅消息模板id"
+      order:  "模板中 订单编号 字段名"
+      title:  "模板中 订单标题 字段名"
+      status: "模板中 订单状态 字段名"
+      time:   "模板中 订单更新时间 字段名"
+      other:  "模板中 备注 字段名 (用于传递维修工信息)"
+
+    comment:
+      tmpl:    "微信留言消息模板id"
+      title:   "模板中 订单标题 字段名"
+      name:    "模板中 留言人 字段名"
+      messgae: "模板中 留言内容 字段名"
+      time:    "模板中 留言时间 字段名"
+
