Update goreleaser config

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -47,6 +47,7 @@ builds:
     goarch:
       - amd64
     ldflags:
+      - -extldflags '-static'
       - -s -w 
       - -X "main.BuildTags={{.Tag}}"
       - -X "main.BuildTime={{.Date}}"
@@ -57,12 +58,13 @@ builds:
     env:
       - CGO_ENABLED=1
       - CC=aarch64-linux-gnu-gcc
-      - CXX=aarch64-linux-gnu-g++ 
+      - CXX=aarch64-linux-gnu-g++
     goos:
       - linux
     goarch:
       - arm64
     ldflags:
+      - -extldflags '-static'
       - -s -w 
       - -X "main.BuildTags={{.Tag}}"
       - -X "main.BuildTime={{.Date}}"
@@ -72,8 +74,8 @@ builds:
   - id: windows_i686
     env:
       - CGO_ENABLED=1
-      - CC=i686-w64-mingw32-gcc
-      - CXX=i686-w64-mingw32-g++
+      - CC=i686-w64-mingw32-gcc -static-libgcc -static-libstdc++ -Wl,-Bstatic,--whole-archive -lwinpthread -Wl,--no-whole-archive -Wl,-Bdynamic
+      - CXX=i686-w64-mingw32-g++ -static-libgcc -static-libstdc++ -Wl,-Bstatic,--whole-archive -lwinpthread -Wl,--no-whole-archive -Wl,-Bdynamic
     goos:
       - windows
     goarch:
@@ -88,8 +90,8 @@ builds:
   - id: windows_amd64
     env:
       - CGO_ENABLED=1
-      - CC=x86_64-w64-mingw32-gcc
-      - CXX=x86_64-w64-mingw32-g++
+      - CC=x86_64-w64-mingw32-gcc -static-libgcc -static-libstdc++ -Wl,-Bstatic,--whole-archive -lwinpthread -Wl,--no-whole-archive -Wl,-Bdynamic
+      - CXX=x86_64-w64-mingw32-g++ -static-libgcc -static-libstdc++ -Wl,-Bstatic,--whole-archive -lwinpthread -Wl,--no-whole-archive -Wl,-Bdynamic
     goos:
       - windows
     goarch:
@@ -132,7 +134,3 @@ changelog:
     exclude:
       - '^docs:'
       - '^test:'
-
-release:
-  prerelease: auto
-  mode: keep-existing
