Add global rate limiter

--- a/example/app.yml.example
+++ b/example/app.yml.example
@@ -62,5 +62,16 @@ cache:
     port: 6379
     password: ""
 
+throttling:
+  enable: false
+  # the max number of requests allowed in a period.
+  burst: 100
+  # the duration between requests.
+  rate: 10
+  # the purge duration.
+  purge: 1m
+  # the expiration duration.
+  expire: 10m
+
 # channel size of event bus (message bus).
 bus_buffer: 1000
