--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.18
+          go-version: 1.21.3
       
       - name: Check out code
         uses: actions/checkout@v2
@@ -23,7 +23,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.18
+          go-version: 1.21.3
 
       - name: Check out code
         uses: actions/checkout@v2
@@ -43,7 +43,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.18
+          go-version: 1.21.3
 
       - name: Check out code
         uses: actions/checkout@v2
@@ -54,6 +54,6 @@ jobs:
         run: git fetch --force --tags
 
       - name: Create snapshot
-        run: "docker run --rm --privileged -e CGO_ENABLED=1 -e GITHUB_TOKEN=$GITHUB_TOKEN -e GOVERSION=$(go version | awk '{print $3;}') -v /var/run/docker.sock:/var/run/docker.sock -v `pwd`:/go/src/maintainman -v /usr:/sysroot/usr -w /go/src/maintainman xaxy/goreleaser-cross:v1.18.0 release --snapshot --rm-dist"
+        run: "docker run --rm --privileged -e CGO_ENABLED=1 -e GITHUB_TOKEN=$GITHUB_TOKEN -e GOVERSION=$(go version | awk '{print $3;}') -v /var/run/docker.sock:/var/run/docker.sock -v `pwd`:/go/src/maintainman -v /usr:/sysroot/usr -w /go/src/maintainman goreleaser/goreleaser-cross:v1.21.3 release --snapshot --clean"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
