--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -129,13 +129,15 @@ archives:
     format_overrides:
       - goos: windows
         format: zip
-    replacements:
-      darwin: macOS
-      linux: Linux
-      windows: Windows
-      386: i386
-      686: i686
-      amd64: x86_64
+    name_template: >-
+      {{- .ProjectName }}
+      {{- .Version }}_
+      {{- title .Os }}_
+      {{- if eq .Arch "amd64" }}x86_64
+      {{- else if eq .Arch "386" }}i386
+      {{- else if eq .Arch "686" }}i686
+      {{- else }}{{ .Arch }}{{ end }}
+      {{- if .Arm }}v{{ .Arm }}{{ end -}}
 
 checksum:
   name_template: 'checksums.txt'
