Add race test & Fix data race problem in rbac
Signed-off-by: xaxys <tpnnghd@163.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           go generate ./...
 
       - name: Run Unit tests.
-        run: make test
+        run: make test-ci
 
   build:
     name: Build Snapshot
